<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/editTextLastName"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/nom"
        android:inputType="text"
        android:text="VERNET" />

    <EditText
        android:id="@+id/editTextFirstName"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="Prénom"
        android:inputType="text"
        android:text="Alexandre" />

    <EditText
        android:id="@+id/editTextPhone"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="Téléphone"
        android:inputType="phone"
        android:text="0778555958" />

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:text="alexandre.vernet@ynov.com" />

    <EditText
        android:id="@+id/editTextPsw"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:autofillHints=""
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:text="alex123" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:padding="20dp"
        android:text="@string/inscription"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewLogin"
        style="@style/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_j_client_connectez_vous_ici" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>